--- a/checkout.html
+++ b/checkout.html
@@ -28,9 +28,10 @@
           </a>
         </div>
 
+        
         <div class="checkout-header-middle-section">
-          Checkout (<a class="return-to-home-link"
-            href="amazon.html">3 items</a>)
+          Checkout (<a class="return-to-home-link js-return-to-home-link"
+            href="amazon.html">items</a>)
         </div>
 
         <div class="checkout-header-right-section">
